los pokemones ya se dan en su madre :D

--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Pokemon</title>
 </head>
+
 <body>
-  
+
+  <div id="campo">
+    <label for="pokemon1">Pokemon 1</label>
+    <select name="pokemon1" id="pokemon1"></select>
+    <label for="pokemon2">Pokemon 2</label>
+    <select name="pokemon2" id="pokemon2"></select>
+    <button onclick="pelear()">Pelear</button>
+
+    <h2 id="res"></h2>
+  </div>
+
   <script src="main.js"></script>
 </body>
+
 </html>
